Fix filter panel line spacing

--- a/less/custom/slidereveal-panel-item-filter.less
+++ b/less/custom/slidereveal-panel-item-filter.less
@@ -24,8 +24,13 @@
 
   .item-filter-list {
     > li,
-    > dd {
+    dd {
       line-height: 2;
+
+      > label {
+        line-height: 1.25;
+        margin-top: 0.5em;
+      }
     }
   }
 }
